fix z-index slider homepage

--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,6 +1,6 @@
 header {
 	display: flex;
-	z-index: 1;
+	z-index: 9;
 	padding: 10px 0;
 	background-color: white;
 	position: fixed;
